<resources>
    <string name="app_name">AndroidFacebook</string>
    <string name="loginUsername">enter a mail or phone number</string>
    <string name="loginPassword">password</string>
    <string name="signInBtn">sign in</string>
    <string name="signUpBtn">sign up</string>
    <string name="facebook_icon_name">facebook_icon</string>
    <string name="LoginInput">email or phone number</string>
    <string name="LoginPassword">password</string>
    <string name="loginBtn">Log in</string>
    <string name="LoginSignUp">Sign up for facebook</string>
    <string name="forgetPassword">Forget password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back">Go Back</string>
    <string name="confirm_password">confirm password</string>
    <string name="display_name">Display Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="todo">TODO</string>
    <string name="more_tool_icon">more tool icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="market_place_icon">market place icon</string>
    <string name="people_icon">people icon</string>
    <string name="home_icon">home icon</string>
    <string name="videos_icon">videos icon</string>
    <string name="add_post_edit_text">What do you want to share?</string>
    <string name="picture_icon_content">picture icon</string>
    <string name="picutre_or_video">picutre or video</string>
    <string name="tag_people">Tag people</string>
    <string name="live_icon">Live icon</string>
    <string name="live">Live</string>
    <string name="Aa">Aa</string>
    <string name="background_color">Background color</string>
    <string name="add_post">Add post</string>
    <string name="post">post</string>
    <string name="delete">delete</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="share_via_email">Share via Email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="icon_representing_the_user">Icon representing the user</string>
    <string name="icon_representing_the_pic">Icon representing the pic</string>
    <string name="icon_representing_the_like">Icon representing the like</string>
    <string name="icon_representing_comment">Icon representing comment</string>
    <string name="icon_representing_share">Icon representing share</string>
    <string name="icon_representing_line" />
    <string name="comment_icon">comment_icon</string>
    <string name="go_back_to_pid">Go back</string>
    <string name="add_comment">Add comment</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="edit_comment">edit comment</string>
    <string name="delete_comment">delete comment</string>
    <string name="selected_image">selected_image</string>
    <string name="delete_photo">Delete photo</string>
    <string name="dark_lightmode">Dark/Lightmode</string>
    <string name="cancel">Cancel</string>
    <string name="delete_user">delete user</string>
    <string name="edit_user">Edit User</string>
    <string name="submit">Submit</string>
    <string name="delete_user2">Delete User</string>
    <string name="notifications">Notifications</string>
</resources>