<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notification.NotificationPage">

    <!-- Bar at the top -->
    <View
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/backroundcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/videos_icon"
        android:src="@drawable/play_square_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="@+id/topBar"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/peopleIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/textColor"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/home_icon"
        android:clickable="true"
        android:onClick="onBackToPid"
        android:src="@drawable/home_2_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="@+id/topBar"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/playIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/textColor"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/peopleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/people_icon"
        android:src="@drawable/profile_round_1342_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuIcon"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        app:tint="@color/textColor"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/marketIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/market_place_icon"
        android:src="@drawable/market_shop_shopping_ecommerce_cart_buy_online_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toStartOf="@+id/peopleIcon"
        app:layout_constraintStart_toEndOf="@+id/notificationIcon"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        app:tint="@color/textColor"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/notification_icon"
        android:src="@drawable/notification_bell_1397_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/textColor"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/menuIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/more_tool_icon"
        android:src="@drawable/line_3_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toStartOf="@+id/notificationIcon"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        app:tint="@color/textColor"
        android:background="@null"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:color="@color/textColor"
        android:text="@string/notifications"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstNotifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:nestedScrollingEnabled="true"
        app:layout_dodgeInsetEdges="bottom"
        android:background="@color/darker_gray"
        app:layout_behavior="YOUR_LAYOUT_BEHAVIOR_CLASS_NAME"
        tools:ignore="MissingClass" />

</androidx.constraintlayout.widget.ConstraintLayout>