<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".login.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="108dp"
            android:contentDescription="@string/facebook_icon_name"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <EditText
            android:id="@+id/textView3"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:autofillHints="username"
            android:backgroundTint="@color/colorAccentDark"
            android:hint="@string/LoginInput"
            android:inputType="text"
            android:textColor="@color/colorAccentDark"
            android:textColorHint="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.034" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:autofillHints="password"
            android:backgroundTint="@color/colorAccentDark"
            android:ems="10"
            android:hint="@string/LoginPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorAccentDark"
            android:textColorHint="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.028" />


        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="636dp"
            android:autofillHints="password"
            android:backgroundTint="@color/colorAccentDark"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccentDark"
            android:textColorHint="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:autofillHints="display name"
            android:backgroundTint="@color/colorAccentDark"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/display_name"
            android:textColor="@color/colorAccentDark"
            android:textColorHint="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4"
            app:layout_constraintVertical_bias="0.046" />

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/select_photo"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            app:layout_constraintVertical_bias="0.048" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectPhoto" />

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/go_back"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>