<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addspages.EditUser">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/submit"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Edit User"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Username"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Password, if not change remain old one"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/username"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Display Name"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        tools:layout_editor_absoluteX="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectPhoto"
        app:layout_constraintTop_toTopOf="@+id/display_name">

        <ImageView
            android:id="@+id/selectedImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/selected_image" />

        <Button
            android:id="@+id/btnPhotoDel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:backgroundTint="@color/colorPrimaryLight"
            android:textColor="@color/colorAccentDark"
            android:text="@string/delete_photo" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/select_photo"
        android:textColor="@color/colorAccentDark"
        android:onClick="onAddPicToPostClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/cancel"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintTop_toBottomOf="@id/btnSelectPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>